--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -30,7 +30,16 @@
 
     @include respond(xs) {
       flex-direction: column;
-      height: 50%;
+      height: 60%;
+      width: 80%;
+    }
+
+    @include respond(xxxs) {
+      height: 75%;
+    }
+
+    @include respond(xxxxs) {
+      height: 65%;
     }
 
     .text {
@@ -54,6 +63,14 @@
 
       p {
         font-size: $tiny;
+
+        @include respond(xs) {
+          font-size: $small;
+        }
+
+        @include respond(xxxxs) {
+          font-size: 2rem;
+        }
       }
     }
 
@@ -76,10 +93,17 @@
       }
 
       @include respond(xs) {
-          margin-top: -6rem;
-        height: 110px;
+        margin-top: -6rem;
+        height: 150px;
         img {
-          height: 110px;
+          height: 150px;
+        }
+      }
+
+      @include respond(xxxs) {
+        height: 100px;
+        img {
+          height: 100px;
         }
       }
 
